--- a/.github/workflows/release_version.yml
+++ b/.github/workflows/release_version.yml
@@ -4,18 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'RBKLiveness.podspec'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: convictional/trigger-workflow-and-wait@v1.3.0
-        with:
-          owner: BankRBK
-          repo: RBKLiveness
-          github_token: ${{ secrets.WORKFLOW_TOKEN }}
-          workflow_file_name: pull_request.yml
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
