--- a/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -2550,6 +2550,38 @@
             "funcSelfKind": "NonMutating"
           },
           {
+            "kind": "Function",
+            "name": "viewWillDisappear",
+            "printedName": "viewWillDisappear(_:)",
+            "children": [
+              {
+                "kind": "TypeNominal",
+                "name": "Void",
+                "printedName": "()"
+              },
+              {
+                "kind": "TypeNominal",
+                "name": "Bool",
+                "printedName": "Swift.Bool",
+                "usr": "s:Sb"
+              }
+            ],
+            "declKind": "Func",
+            "usr": "c:@M@RBKLiveness@objc(cs)RBKLivenessViewController(im)viewWillDisappear:",
+            "mangledName": "$s11RBKLiveness0A14ViewControllerC17viewWillDisappearyySbF",
+            "moduleName": "RBKLiveness",
+            "overriding": true,
+            "objc_name": "viewWillDisappear:",
+            "declAttributes": [
+              "Dynamic",
+              "ObjC",
+              "Custom",
+              "Override",
+              "AccessControl"
+            ],
+            "funcSelfKind": "NonMutating"
+          },
+          {
             "kind": "Var",
             "name": "titleFont",
             "printedName": "titleFont",
@@ -3154,14 +3186,14 @@
     {
       "filePath": "\/Users\/yessetmurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/RBKLivenessViewController.swift",
       "kind": "IntegerLiteral",
-      "offset": 963,
+      "offset": 1025,
       "length": 1,
       "value": "1"
     },
     {
       "filePath": "\/Users\/yessetmurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/RBKLivenessViewController.swift",
       "kind": "BooleanLiteral",
-      "offset": 871,
+      "offset": 933,
       "length": 5,
       "value": "false"
     }
