--- a/RBKLiveness.xcframework/ios-arm64/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/arm64-apple-ios.abi.json
+++ b/RBKLiveness.xcframework/ios-arm64/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/arm64-apple-ios.abi.json
@@ -2510,6 +2510,7 @@
                 "kind": "TypeNominal",
                 "name": "Bool",
                 "printedName": "Swift.Bool",
+                "hasDefaultArg": true,
                 "usr": "s:Sb"
               }
             ],
@@ -3306,6 +3307,13 @@
       "filePath": "\/Users\/yessetmurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/RBKLivenessViewController.swift",
       "kind": "BooleanLiteral",
       "offset": 849,
+      "length": 5,
+      "value": "false"
+    },
+    {
+      "filePath": "\/Users\/yessetmurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/RBKLivenessViewController.swift",
+      "kind": "BooleanLiteral",
+      "offset": 1121,
       "length": 5,
       "value": "false"
     },
