--- a/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -3957,56 +3957,56 @@
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 14843,
+      "offset": 14896,
       "length": 1,
       "value": "1"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 14972,
+      "offset": 15025,
       "length": 1,
       "value": "1"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "BooleanLiteral",
-      "offset": 15085,
+      "offset": 15138,
       "length": 5,
       "value": "false"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 15261,
+      "offset": 15314,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "BooleanLiteral",
-      "offset": 15953,
+      "offset": 16006,
       "length": 4,
       "value": "true"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 16023,
+      "offset": 16076,
       "length": 1,
       "value": "2"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "BooleanLiteral",
-      "offset": 16473,
+      "offset": 16526,
       "length": 4,
       "value": "true"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "BooleanLiteral",
-      "offset": 17319,
+      "offset": 17372,
       "length": 5,
       "value": "false"
     },
@@ -4020,28 +4020,28 @@
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 17954,
+      "offset": 17880,
       "length": 1,
       "value": "5"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 17959,
+      "offset": 17885,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 17994,
+      "offset": 17920,
       "length": 1,
       "value": "1"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Camera\/RBKLivenessCameraController.swift",
       "kind": "IntegerLiteral",
-      "offset": 18048,
+      "offset": 17974,
       "length": 1,
       "value": "1"
     },
@@ -4553,76 +4553,76 @@
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
       "offset": 257,
-      "length": 76,
-      "value": "\"https:\/\/armrbk.kazincombank.kz:30500\/check_version\/biometry_library\/check\/\""
+      "length": 68,
+      "value": "\"https:\/\/arm.bankrbk.kz:30500\/check_version\/biometry_library\/check\/\""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 645,
+      "offset": 637,
       "length": 6,
       "value": "\"name\""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 804,
+      "offset": 796,
       "length": 5,
       "value": "\"GET\""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 990,
+      "offset": 982,
       "length": 13,
       "value": "\"RBKLiveness\""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 1083,
+      "offset": 1075,
       "length": 15,
       "value": "\"Status code: \""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 1151,
+      "offset": 1143,
       "length": 21,
       "value": "\"Error description: \""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "BooleanLiteral",
-      "offset": 1284,
+      "offset": 1276,
       "length": 5,
       "value": "false"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "IntegerLiteral",
-      "offset": 1347,
+      "offset": 1339,
       "length": 3,
       "value": "200"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "IntegerLiteral",
-      "offset": 1353,
+      "offset": 1345,
       "length": 3,
       "value": "300"
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "StringLiteral",
-      "offset": 1551,
+      "offset": 1543,
       "length": 10,
       "value": "\"is_exist\""
     },
     {
       "filePath": "\/Users\/ymurat\/Projects\/Frameworks\/RBKLivenessSource\/RBKLiveness\/Utils\/RBKLivenessApplication.swift",
       "kind": "BooleanLiteral",
-      "offset": 1607,
+      "offset": 1599,
       "length": 5,
       "value": "false"
     },
