Added option to compose static library via new aggregate scheme

--- a/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/RBKLiveness.xcframework/ios-x86_64-simulator/RBKLiveness.framework/Modules/RBKLiveness.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -5606,7 +5606,7 @@
       "value": "16"
     },
     {
-      "filePath": "\/Users\/baygazin\/Library\/Developer\/Xcode\/DerivedData\/RBKLiveness-fkyudvlowglnapcwiprsnyursyrl\/Build\/Intermediates.noindex\/DependentBuilds\/RBKLiveness.build\/Release-iphonesimulator\/RBKLiveness.build\/DerivedSources\/GeneratedAssetSymbols.swift",
+      "filePath": "\/Users\/baygazin\/Library\/Developer\/Xcode\/DerivedData\/RBKLiveness-fkyudvlowglnapcwiprsnyursyrl\/Build\/Intermediates.noindex\/DependentBuilds\/RBKLiveness.build\/Release STATIC_LIB-iphonesimulator\/RBKLiveness.build\/DerivedSources\/GeneratedAssetSymbols.swift",
       "kind": "StringLiteral",
       "offset": 739,
       "length": 15,
