Changed runs on

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   check_title:
     name: Check title
-    runs-on: ubuntu-latest
+    runs-on: ubuntu
     steps:
       - uses: Slashgear/action-check-pr-title@v4.3.0
         with:
